TWC3167-7535 : Product alias add new product focus issue in cancel button, meet comp page verical column sorting arrow alignment fixes - UI Bug Fixes (#2647)

--- a/Intel.MyDeals/Client/src/app/admin/ProductAlias/admin.productAlias.component.css
+++ b/Intel.MyDeals/Client/src/app/admin/ProductAlias/admin.productAlias.component.css
@@ -23,3 +23,7 @@
 .remove-space-cancel {
     margin-left: -1.14em !important
 }
+
+.remove-focus-hightlight:focus {
+    box-shadow: none !important;
+}
